# ha-extraflame-totalcontrol

./: .gitignore  LICENSE  README.md  hacs.json  info.md  lovelace_card.yaml  pyproject.toml
custom_components/extraflame_totalcontrol/: __init__.py  api_client.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  frontend_setup.py  manifest.json  models.py  number.py  select.py  sensor.py  strings.json  switch.py  visual.py
custom_components/extraflame_totalcontrol/frontend/: extraflame-stove-card.js
custom_components/extraflame_totalcontrol/translations/: en.json  fr.json
docker/: Dockerfile  app.py  docker-compose.yml
extraflame_totalcontrol/: __init__.py  client.py
